# EVA-Ai

./: .gitignore  2.txt  AGENTS.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_INTRO.md  AUDIT.md  BOTTLENECK_ANALYSIS.md  CLAUDE.md  COGNIFLEX_ANALYSIS.md  CONTRADICTION_MODULE_REPORT.md  DEEPNOTE_INSTRUCTIONS.md  DESIGN.md  DOCUMENT_MEMORY.md  EVA_AUDIT.md  EVA_DOCUMENTATION.md  EVA_FCP_INTEGRATION.md  EVA_FIXES_LOG.md  EVA_FIX_PLAN.md  EVA_GENERATOR_ARCHITECTURE.md  EVA_WORKLOG.md  EVA_ethics.md  EVA_learning.md  EVA_log.txt  FCP_MERGE_PLAN.md  FINAL_EVA_COMPLIANCE_REPORT.md  FINAL_INTEGRATION_REPORT.json  FINAL_PROJECT_AUDIT.md  GPT3_TRAINING_DOCUMENTATION.md  IMPLEMENTATION_PLAN_V2.md  IMPORT_ANALYSIS_REPORT.md  IMPROVEMENT_PLAN.md  LAMBDA_ARCHITECTURE.md  LAMBDA_ARCHITECTURE_PLAN.md  LAMBDA_D_DOCUMENTATION.md  LOG_ANALYSIS.md  MIGRATION_SUMMARY.md  MODULE_INTEGRATION_REPORT.md  OPTIMIZATIONS_PLAN.md  OPTIMIZATION_RESULTS.md  PERFORMANCE_ROADMAP.md  (+280 more)
.opencode/: config.json
.venv311_backup/: pyvenv.cfg
analysis/: FIX_PLAN.md  ONBOARDING.md  QUICK_REFERENCE.md  analytics_adaptation_system.md  contradiction_legacy_system.md  core_brain_background_system.md  core_generation.md  cross_analysis_core_memory.md  cross_analysis_dialog_miners.md  cross_analysis_fcp_ethics.md  cross_analysis_final.md  cross_analysis_final_v2.md  cross_analysis_server_monitoring.md  deep_dive_C2_DUPLICATE_CHAT.md  deep_dive_C3_CONTRADICTION_SYSTEMS.md  deep_dive_H1_KGADAPTER.md  deep_dive_H2_DIALOG_CONCEPTS.md  deep_dive_H3_H4.md  deep_dive_K1_DISTRIBUTED_CHECK.md  deep_dive_K6_PRIORITY_FIX.md  (+16 more)
(+4077 files in other folders)
